Hands-on lab/microservices/claims-manager/src/main/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claims-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: claims-manager
  template:
    metadata:
      labels:
        app: claims-manager
    spec:
      containers:
      - name: claims-manager
        image: ${IMAGE}
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: claims-manager 
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: claims-manager
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claims-manager
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: claims-manager.${AKS_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: claims-manager
            port: 
              number: 8080
